RESOLVED FIXED270538
Fix bounds check in Queue::writeBuffer when buffer has been destroyed
https://bugs.webkit.org/show_bug.cgi?id=270538
Summary Fix bounds check in Queue::writeBuffer when buffer has been destroyed
Alex Christensen
Reported 2024-03-05 13:27:57 PST
Attachments
Alex Christensen
Comment 1 2024-03-05 13:29:45 PST
EWS
Comment 2 2024-03-06 12:53:00 PST
Committed 275756@main (7fed8609a814): <https://commits.webkit.org/275756@main> Reviewed commits have been landed. Closing PR #25501 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.